[fizzbuzz]01 - initialize kata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["safecorners <safecorners.mobile@gmail.com>"]
 readme = "README.md"
 packages = [
     {include = "money", from = "src"},
-    {include = "fibonacci", from = "src"}
+    {include = "fibonacci", from = "src"},
+    {include = "fizzbuzz", from = "src"},
 ]
 
 [tool.poetry.dependencies]
