--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ addopts = [
     "--import-mode=importlib",
 ]
 pythonpath = ["src"]
+log_cli = true
+log_cli_level = "INFO"
 
 [tool.mypy]
 disallow_untyped_defs = true
