--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python = "^3.11"
 pytest = "^8.0.1"
 pytest-xdist = "^3.5.0"
 pytest-cov = "^4.1.0"
+coverage = "^7.4.3"
 
 
 [tool.poetry.group.dev.dependencies]
