--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,5 @@
 name: CI
-on: push
+on: [push]
 jobs:
   run:
     strategy:
@@ -7,7 +7,7 @@ jobs:
       matrix:
         python-version: ["3.11"]
         poetry-version: ["1.8.1"]
-        os: [ubuntu-22.04, macos-latest, windows-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
