--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   run:
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         python-version: ["3.11"]
         poetry-version: ["1.8.1"]
@@ -34,7 +34,7 @@ jobs:
       - name: Generate a coverage reports with pytest
         run: poetry run pytest --cov
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: safecorners/tdd-by-example-with-python
