--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install the project dependencies
         run: poetry install
       - name: Generate a coverage reports with pytest
-        run: poetry run pytest --cov
+        run: poetry run pytest --cov --cov-report json
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
